[CDAP-13187] Tags improvements/bugfixes - Hides pipeline version, and shortens delete label as requested - Displays tags related error in a banner instead of displaying inline - Makes delete label red to be consistent with other delete buttons, and makes popper width smaller since we removed the 'Delete Pipeline' label - Shows message when there are no entites with a tag - Migrate tags styling changes to global, instead of just in pipeline details view - Implements showing All Tags label and popover when tags overflow

--- a/cdap-ui/app/cdap/components/SpotlightSearch/SpotlightModal/SpotlightModal.scss
+++ b/cdap-ui/app/cdap/components/SpotlightSearch/SpotlightModal/SpotlightModal.scss
@@ -1,5 +1,5 @@
 /*
- * Copyright © 2016 Cask Data, Inc.
+ * Copyright © 2016-2018 Cask Data, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  * use this file except in compliance with the License. You may obtain a copy of
@@ -15,10 +15,10 @@
  */
 
 @import '../../../styles/variables.scss';
-$spotlight-bg-color: darken($cdap-darkness, 25%);
-$row-dark-color: #eeeeee;
-$description-color: #666666;
-$light-grey: #cccccc;
+$spotlight-bg-color: $modal-header-color;
+$row-dark-color: $grey-07;
+$description-color: $grey-02;
+$light-grey: $grey-05;
 $hightlight-color: #7f8c8d;
 
 .modal-dialog.search-results-modal {
@@ -169,7 +169,12 @@ $hightlight-color: #7f8c8d;
         color: $spotlight-bg-color;
         border-radius: 4px;
       }
+    }
 
+    .search-results-container {
+      .no-search-results {
+        margin-top: 5px;
+      }
     }
   }
 }
